js和线程部分练习

--- a/BasicLearn/BasicLearn.Javascript.Part1/BasicLearn.Javascript.Part1.csproj
+++ b/BasicLearn/BasicLearn.Javascript.Part1/BasicLearn.Javascript.Part1.csproj
@@ -51,7 +51,11 @@
     <Reference Include="System.Web.ApplicationServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Index.aspx" />
+    <Content Include="JqueryTest.htm" />
     <Content Include="JsBasicTest.htm" />
+    <Content Include="Scripts\JsHierarchy.js" />
+    <Content Include="Scripts\myJquerytest.js" />
     <Content Include="Styles\Site.css" />
     <Content Include="Global.asax" />
     <Content Include="Scripts\jquery-1.4.1-vsdoc.js" />
@@ -66,8 +70,16 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CookieExtension.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="Index.aspx.cs">
+      <DependentUpon>Index.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Index.aspx.designer.cs">
+      <DependentUpon>Index.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
