--- a/BasicLearn/BasicLearn.Thread.Part1/BasicLearn.Thread.Part1.csproj
+++ b/BasicLearn/BasicLearn.Thread.Part1/BasicLearn.Thread.Part1.csproj
@@ -34,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="GeoWeb.Common">
+      <HintPath>..\..\..\..\..\..\GEO\GeoWebDevelop\GeoWeb.Lib\GeoWeb.Common.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,7 +49,13 @@
     <Compile Include="MuticastDelegateThread.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SafeTimer.cs" />
     <Compile Include="ThreadBasicOP.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Config\Data.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
