--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 BasicLearn/BasicLearn.Thread.Part1/obj/x86/Debug/BasicLearn.Thread.Part1.pdb
 BasicLearn/BasicLearn.Thread.Part1/obj/x86/Debug/BasicLearn.Thread.Part1.pdb
+BasicLearn/BasicLearn.Javascript.Part1/bin/BasicLearn.Javascript.Part1.pdb
+BasicLearn/BasicLearn.Javascript.Part1/bin/BasicLearn.Javascript.Part1.pdb
+BasicLearn/BasicLearn.Javascript.Part1/bin/BasicLearn.Javascript.Part1.dll
+BasicLearn/BasicLearn.Javascript.Part1/obj/Debug/BasicLearn.Javascript.Part1.pdb
+BasicLearn/BasicLearn.Javascript.Part1/bin/BasicLearn.Javascript.Part1.dll
+BasicLearn/BasicLearn.Javascript.Part1/bin/BasicLearn.Javascript.Part1.dll
