--- a/BasicLearn/RestfulApp.WebUI/RestfulApp.WebUI.csproj
+++ b/BasicLearn/RestfulApp.WebUI/RestfulApp.WebUI.csproj
@@ -56,6 +56,7 @@
     <Content Include="Account\ChangePasswordSuccess.aspx" />
     <Content Include="Account\Login.aspx" />
     <Content Include="Account\Register.aspx" />
+    <Content Include="Models\KAjax.js" />
     <Content Include="Models\PersonManage.htm" />
     <Content Include="Scripts\jquery.boxy.js" />
     <Content Include="Scripts\jquery.tmpl.min.js" />
