--- a/BasicLearn/BasicLearn.Javascript.Part1/BasicLearn.Javascript.Part1.csproj
+++ b/BasicLearn/BasicLearn.Javascript.Part1/BasicLearn.Javascript.Part1.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -51,6 +51,8 @@
     <Reference Include="System.Web.ApplicationServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="BaiduMapDemo.htm" />
+    <Content Include="Drag.htm" />
     <Content Include="Index.aspx" />
     <Content Include="JqueryTest.htm" />
     <Content Include="JsBasicTest.htm" />
@@ -58,6 +60,7 @@
     <Content Include="Scripts\Closure.js" />
     <Content Include="Scripts\JsHierarchy.js" />
     <Content Include="Scripts\KAjax.js" />
+    <Content Include="Scripts\MapLocationService.js" />
     <Content Include="Scripts\myJquerytest.js" />
     <Content Include="Styles\Site.css" />
     <Content Include="Global.asax" />
